# volleyball_player_detection

./: .gitignore  README.md  config.json  main.py  pyproject.toml  test.ipynb
.github/workflows/: test.yaml
DesktopApp/: config.json  main.py
cv_algorithm/: README.md  __init__.py  detect.py  model.py  testt.py  utils.py
test/: test_model.py
