[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
numpy = "^1.21"
torch = "^2.5.1"
torchvision = "^0.20.1"
pillow = "^11.0.0"
imgaug = "^0.4.0"
tqdm = "^4.67.0"
tensorboard = "^2.18.0"
pytest = "^8.3.3"
tkinterdnd2 = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
